2018-10-12  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-ccid.c (ccid_thread): Notify host about ack button.

2018-10-02  NIIBE Yutaka  <gniibe@fsij.org>

	* src/stack-def.h (SIZE_0): Increase.

	* chopstx: Update to 1.11.

2018-10-01  NIIBE Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (EV_EXEC_ACK_REQUIRED): New.
	(EV_EXEC_FINISHED_ACK): Remove.
	(CCID_STATE_CONFIRM_ACK): Remove.
	(CCID_STATE_ACK_REQUIRED_0, CCID_STATE_ACK_REQUIRED_1): New.
	* src/openpgp.c (cmd_pso): Send EV_EXEC_ACK_REQUIRED, if needed.
	(cmd_internal_authenticate): Likewise.
	(process_command_apdu): No return value.
	(openpgp_card_thread): Always send EV_EXEC_FINISHED.
	* src/usb-ccid.c (ccid_send_data_block_time_extension): Follow the
	change of state.
	(ccid_handle_data, ccid_handle_timeout): Likewise.
	(ccid_thread): Handle EV_EXEC_ACK_REQUIRED.
	Change for LED blink.
	* src/main.c (main): LED blink during waiting ACK.

2018-09-27  NIIBE Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (NR_DO_UIF_SIG, NR_DO_UIF_DEC, NR_DO_UIF_AUT): New.
	* src/openpgp-do.c (rw_uif) [ACKBTN_SUPPORT]: New.
	(GPG_DO_UIF_SIG, GPG_DO_UIF_DEC, GPG_DO_UIF_AUT): New.
	(feature_mngmnt) [ACKBTN_SUPPORT]: New.
	(cmp_app_data, cmp_discretionary): Add ACKBTN_SUPPORT.
	(gpg_do_table): Add for GPG_DO_UIF_SIG, GPG_DO_UIF_DEC,
	GPG_DO_UIF_AUT, and GPG_DO_FEATURE_MNGMNT.
	(gpg_do_get_uif) [ACKBTN_SUPPORT]: New.
	(gpg_data_scan): Handle uif_flags.
	* src/openpgp.c (process_command_apdu) [ACKBTN_SUPPORT]: Add user
	interaction handling.

2018-09-27  NIIBE Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (LED_WAIT_FOR_BUTTON): New.
	* src/main.c (main): Blink rapidly when asking ACK.
	* src/usb-ccid.c (ccid_thread): Use LED_WAIT_FOR_BUTTON.

2018-09-27  NIIBE Yutaka  <gniibe@fsij.org>

	* src/config.h.in: Add @ACKBTN_DEFINE@.
	* src/configure: Add ACKBTN_SUPPORT.
	* src/gnuk.h (EV_EXEC_FINISHED_ACK): New.
	(CCID_STATE_CONFIRM_ACK): New.
	* src/openpgp.c (process_command_apdu): Change for cmd_pso, and
	cmd_internal_authenticate.