@@ -1,3 +1,10 @@
+2018-11-09  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/main.c (display_status_code): There is
+	no case where ccid_state == CCID_STATE_RECEIVE.
+	* src/gnuk.h (CCID_STATE_RECEIVE): Remove.
+	(CCID_STATE_SEND): Remove.
+
 2018-10-12  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/usb-ccid.c (ccid_thread): Notify host about ack button.
